# Nothing

./: .gitignore  README.md  setup.sh
circuits/: BIGINT.md  nothing_settle.circom
cli/: index.js  package-lock.json  package.json
nothing-core/: Cargo.toml
nothing-core/src/: lib.rs  main.rs
nothing-core/src/crypto/: blind_sig.rs  keypair.rs  mod.rs  token.rs
nothing-core/src/settlement/: mod.rs  verify.rs
nothing-core/src/storage/: mod.rs  wallet.rs
nothing-core/src/transport/: mod.rs  node.rs
web/: package-lock.json  package.json  server.js
web/public/: app.js  index.html  style.css
zk/: compile.sh  input_gen.js  package.json  prove.js  setup.js  verify.js
